src/test/deca/syntax/valid/affectation_string.deca
// Description:
//    test l'affection des chaines et leur affichage
//
// Resultats:
//    Affiche "toto"
//
// Historique:
//    cree le 10/01/2022

string s;
{
    s = "toto";
    println(s);
}
